# ALTERDUNE

./: .gitignore  Makefile  readme.md
data/: items.csv  monsters.csv
docs/: commande.md  uml_alterdune_complet.html
gui/: CMakeLists.txt  build.ps1  qml.qrc
gui/qml/: Main.qml
gui/src/: GameBridge.cpp  GameBridge.h  main_qt.cpp
include/: ActAction.h  Bestiary.h  Boss.h  Entity.h  FileLoader.h  Game.h  Inventory.h  Item.h  MiniBoss.h  Monster.h  Normal.h  Player.h
scripts/: deploy_windows.bat
src/: ActAction.cpp  Bestiary.cpp  Boss.cpp  Entity.cpp  FileLoader.cpp  Game.cpp  Inventory.cpp  Item.cpp  MiniBoss.cpp  Monster.cpp  Normal.cpp  Player.cpp  main.cpp
